fix : alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #F9F5F2;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container{
@@ -29,6 +30,7 @@ button{
     border: 2px solid #f0f3ff;
     font-weight: bold;
     border-radius: 5px;
+    white-space: nowrap;
 }
 
 button:hover{
@@ -37,10 +39,16 @@ button:hover{
 }
 
 input{
+    width: 100%;
     border: 2px solid #f0eef0;
     border-radius: 5px;
     padding: 5px 10px;
     margin: 10px 10px;
+}
+
+.input-box{
+    display: flex;
+    align-items: center;
 }
 
 .green{
@@ -66,6 +74,7 @@ input{
     margin: 5px 5px;
     align-items: center;
     gap: 10px;
+    border-bottom: 1px solid #cccccc;
 }
 
 
@@ -75,14 +84,15 @@ input{
     justify-content: space-between;
 }
 
-.poppins{
-    font-family: 'Poppins', sans-serif;
-}
-
 .copyright{
     margin-top: 20px;
     display: flex;
     justify-content: center;
     font-size: smaller;
     color: #cccccc;
+}
+
+.tasks-today{
+    display: flex;
+    justify-content: center;
 }
